# small-tools

./: .gitignore  Cargo.toml  README.md  TOPMOST_USAGE.md  electron-example-package.json  example.html  example.js  index.d.ts  index.js  package.json  preload.js  run-hidden.vbs  run-silent.bat  start-electron.bat  test-fix.js  test-hide-show.js  test-plugin-silent.js  test-plugin.js  test-startmenu.js  test-topmost-advanced.js  test-topmost.js
.claude/: settings.local.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  lib_simple.rs
